[gd_scene load_steps=13 format=3 uid="uid://b5rrhnt2x8lwj"]

[ext_resource type="Texture2D" uid="uid://dre7luqa78f6h" path="res://Assets/2D/Map/Slot.png" id="1_0shtt"]
[ext_resource type="Script" path="res://Scenes/Components/Map/map_component.gd" id="1_gnjh8"]
[ext_resource type="Resource" uid="uid://7pojs6x3y2hi" path="res://Resources/Resources/EnemyData/Enemy01.tres" id="2_r28o3"]
[ext_resource type="Texture2D" uid="uid://b7flnf44fkx4d" path="res://icon.svg" id="3_41mo0"]
[ext_resource type="Script" path="res://Resources/Resources/LevelData/LevelData.gd" id="3_ccm6i"]
[ext_resource type="Script" path="res://Scenes/Entities/Player/Player.gd" id="3_lywi7"]
[ext_resource type="PackedScene" uid="uid://bbcfkpn6g5m6l" path="res://Scenes/Components/Player/CellDetector.tscn" id="4_2lw4j"]
[ext_resource type="Script" path="res://Scenes/Components/Player/CellDetector.gd" id="5_pxqd6"]
[ext_resource type="PackedScene" uid="uid://dtow6ji8ii8gq" path="res://Scenes/Components/Map/fog_component.tscn" id="7_os48y"]

[sub_resource type="Resource" id="Resource_1qtbv"]
script = ExtResource("3_ccm6i")
enemies_type = Array[Resource("res://Resources/Resources/EnemyData/EnemyData.gd")]([ExtResource("2_r28o3")])

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pca7b"]
texture = ExtResource("1_0shtt")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/custom_data_0 = "obstacle"
1:1/0 = 0
1:0/0 = 0
1:0/0/custom_data_0 = "exit"
0:1/0 = 0
0:1/0/custom_data_0 = "enter"
2:1/0 = 0
2:1/0/custom_data_0 = "enemy"

[sub_resource type="TileSet" id="TileSet_cr1h7"]
tile_size = Vector2i(64, 64)
custom_data_layer_0/name = "type"
custom_data_layer_0/type = 4
sources/0 = SubResource("TileSetAtlasSource_pca7b")

[node name="MapComponent" type="Node" node_paths=PackedStringArray("fog", "line_debug")]
script = ExtResource("1_gnjh8")
level_data = SubResource("Resource_1qtbv")
wall_density = 10
max_enemies = 4
fog = NodePath("FogComponent")
line_debug = NodePath("DEBUG/DebugPath")

[node name="CellDetector" parent="." node_paths=PackedStringArray("player", "map_component") instance=ExtResource("4_2lw4j")]
script = ExtResource("5_pxqd6")
player = NodePath("../Player")
map_component = NodePath("..")

[node name="DEBUG" type="Node" parent="."]

[node name="DebugPath" type="Line2D" parent="DEBUG"]
visible = false
z_index = 5
width = 10.22

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_cr1h7")
rendering_quadrant_size = 64
format = 2

[node name="Player" type="Node2D" parent="." node_paths=PackedStringArray("map_component", "cell_detector")]
script = ExtResource("3_lywi7")
map_component = NodePath("..")
cell_detector = NodePath("../CellDetector")

[node name="Player" type="Sprite2D" parent="Player"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_41mo0")

[node name="FogComponent" parent="." node_paths=PackedStringArray("player") instance=ExtResource("7_os48y")]
player = NodePath("../Player")

[connection signal="OnExitLevel" from="Player" to="." method="_on_player_on_exit_level"]
